# auto-agent-test

./: .gitignore  PLAN.md  config.yaml  pyproject.toml
.ao/: activity.jsonl
auto_agent/: __main__.py  config.py  db.py  normalize.py  server.py
auto_agent/agent/: brain.py  builder.py  codex.py  research.py  synthesis.py
auto_agent/routes/: config.py  data.py  feeds.py  ideas.py  news.py  status.py  tags.py  ws.py
auto_agent/static/: index.html
tests/: test_builder.py  test_codex.py  test_dashboard.py  test_db.py  test_ideas_concurrency.py  test_research.py  test_smoke.py  test_synthesis.py  test_ws.py
