[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-agent-test"
version = "0.1.0"
description = "Autonomous agent: research news, synthesize ideas, implement projects via Codex CLI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "pydantic>=2.0",
    "PyYAML>=6.0.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "mypy",
]

[project.scripts]
auto-agent = "auto_agent.__main__:main"
